--- a/.github/workflows/integration_test_app.yaml
+++ b/.github/workflows/integration_test_app.yaml
@@ -59,6 +59,7 @@ jobs:
     name: Required Integration Test For Application Status Checks
     runs-on: ubuntu-latest
     needs:
+      - integration-tests
     if: always() && !cancelled()
     timeout-minutes: 5
     steps:
