--- a/tox.ini
+++ b/tox.ini
@@ -147,8 +147,7 @@ commands =
 description = Run integration tests
 pass_env =
     PYTEST_ADDOPTS
-    OPENSTACK_PASSWORD_AMD64
-    OPENSTACK_PASSWORD_ARM64
+    OPENSTACK_PASSWORD
 deps =
     juju
     pytest
