--- a/app/tox.ini
+++ b/app/tox.ini
@@ -103,8 +103,7 @@ description = Run integration tests
 allowlist_externals=pipx
 pass_env =
     PYTEST_ADDOPTS
-    OPENSTACK_PASSWORD_AMD64
-    OPENSTACK_PASSWORD_ARM64
+    OPENSTACK_PASSWORD
 deps =
     pytest
     pytest-asyncio
