--- a/tox.ini
+++ b/tox.ini
@@ -147,7 +147,8 @@ commands =
 description = Run integration tests
 pass_env =
     PYTEST_ADDOPTS
-    OPENSTACK_PASSWORD
+    OPENSTACK_PASSWORD_AMD64
+    OPENSTACK_PASSWORD_ARM64
 deps =
     juju
     pytest
