--- a/.github/workflows/integration_test_app.yaml
+++ b/.github/workflows/integration_test_app.yaml
@@ -30,6 +30,10 @@ jobs:
         run: |
          cd app
          tox -e integration -- -m arm64 --image=${{ matrix.image }} ${{ secrets.INTEGRATION_TEST_ARGS_APP }}
+      - name: Tmate debugging session
+        if: ${{ failure() && runner.debug }}
+        uses: canonical/action-tmate@main
+        timeout-minutes: 60
   integration-tests-amd:
     name: Integration test (X64)
     runs-on: [self-hosted, X64, jammy, stg-private-endpoint]
@@ -52,6 +56,10 @@ jobs:
         run: |
          cd app 
          tox -e integration -- -m amd64 --image=${{ matrix.image }} ${{ secrets.INTEGRATION_TEST_ARGS_APP }}
+      - name: Tmate debugging session
+        if: ${{ failure() && runner.debug }}
+        uses: canonical/action-tmate@main
+        timeout-minutes: 60
   required_status_checks:
     name: Required Integration Test For Application Status Checks
     runs-on: ubuntu-latest
