--- a/.github/workflows/integration_test_app.yaml
+++ b/.github/workflows/integration_test_app.yaml
@@ -14,6 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        # TODO: Why is jammy not tested on arm? Should focal be tested on arm?
         image: [noble]
     steps:
       - uses: actions/checkout@v4.2.2
@@ -36,7 +37,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        image: [jammy, noble]
+        image: [focal, jammy, noble]
     steps:
       - uses: actions/checkout@v4.2.2
       - uses: canonical/setup-lxd@v0.1.2
