--- a/.github/workflows/integration_test_app.yaml
+++ b/.github/workflows/integration_test_app.yaml
@@ -8,35 +8,19 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  integration-tests-arm:
-    name: Integration test (ARM64)
-    runs-on: [self-hosted, ARM64, jammy, stg-private-endpoint]
-    strategy:
-      fail-fast: false
-      matrix:
-        image: [noble]
-    steps:
-      - uses: actions/checkout@v4.2.2
-      - uses: canonical/setup-lxd@v0.1.2
-      - name: Install tox
-        run: |
-          sudo apt-get update
-          sudo apt-get install pipx -y
-          pipx ensurepath
-          pipx install tox
-      - name: Run integration tests
-        env:
-          OPENSTACK_PASSWORD_ARM64: ${{ secrets.OPENSTACK_PASSWORD_ARM64 }}
-        run: |
-         cd app
-         tox -e integration -- -m arm64 --image=${{ matrix.image }} ${{ secrets.INTEGRATION_TEST_ARGS_APP }}
-  integration-tests-amd:
-    name: Integration test (X64)
+  integration-tests:
+    name: Integration test
     runs-on: [self-hosted, X64, jammy, stg-private-endpoint]
     strategy:
       fail-fast: false
       matrix:
         image: [jammy, noble]
+        arch: [amd64, arm64, s390x]
+        exclude:
+          - image: jammy
+            arch: arm64
+          - image: jammy
+            arch: s390x
     steps:
       - uses: actions/checkout@v4.2.2
       - uses: canonical/setup-lxd@v0.1.2
@@ -46,21 +30,34 @@ jobs:
           sudo apt-get install pipx -y
           pipx ensurepath
           pipx install tox
-      - name: Run integration tests
+      - name: Run integration tests (amd64)
+        if: matrix.arch == 'amd64'
         env:
-          OPENSTACK_PASSWORD_AMD64: ${{ secrets.OPENSTACK_PASSWORD_AMD64 }}
+            OPENSTACK_PASSWORD: ${{ secrets.OPENSTACK_PASSWORD_AMD64 }}
         run: |
-         cd app 
-         tox -e integration -- -m amd64 --image=${{ matrix.image }} ${{ secrets.INTEGRATION_TEST_ARGS_APP }}
+         tox -e integration -- --arch amd64 --image=${{ matrix.image }} ${{ secrets.INTEGRATION_TEST_ARGS_APP_AMD64 }}
+        working-directory: app
+      - name: Run integration tests (arm64)
+        if: matrix.arch == 'arm64'
+        env:
+            OPENSTACK_PASSWORD: ${{ secrets.OPENSTACK_PASSWORD_ARM64 }}
+        run: |
+         tox -e integration -- --arch arm64 --image=${{ matrix.image }} ${{ secrets.INTEGRATION_TEST_ARGS_APP_ARM64 }}
+        working-directory: app
+      - name: Run integration tests (s390x)
+        if: matrix.arch == 's390x'
+        env:
+            OPENSTACK_PASSWORD: ${{ secrets.OPENSTACK_PASSWORD_S390X }}
+        run: |
+         tox -e integration -- --arch s390x --image=${{ matrix.image }} ${{ secrets.INTEGRATION_TEST_ARGS_APP_S390X }}
+        working-directory: app
   required_status_checks:
     name: Required Integration Test For Application Status Checks
     runs-on: ubuntu-latest
     needs:
-      - integration-tests-amd
-      - integration-tests-arm
+      - integration-tests
     if: always() && !cancelled()
     timeout-minutes: 5
     steps:
       - run: |
-          [ '${{ needs.integration-tests-amd.result }}' = 'success' ] || (echo integration-tests-amd failed && false)
-          [ '${{ needs.integration-tests-arm.result }}' = 'success' ] || (echo integration-tests-arm failed && false)
+          [ '${{ needs.integration-tests.result }}' = 'success' ] || (echo integration-tests failed && false)
