--- a/.github/workflows/integration_test_app.yaml
+++ b/.github/workflows/integration_test_app.yaml
@@ -55,6 +55,10 @@ jobs:
         run: |
          tox -e integration -- --arch s390x --image=${{ matrix.image }} ${{ secrets.INTEGRATION_TEST_ARGS_APP_S390X }}
         working-directory: app
+      # TODO: Remove after debug
+      - name: tmate debug
+        if: failure()
+        uses: canonical/action-tmate@main
   required_status_checks:
     name: Required Integration Test For Application Status Checks
     runs-on: ubuntu-latest
