Feature: Add focal support (#91)

--- a/.github/workflows/integration_test_app.yaml
+++ b/.github/workflows/integration_test_app.yaml
@@ -14,9 +14,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        image: [jammy, noble]
+        image: [focal, jammy, noble]
         arch: [amd64, arm64, s390x]
         exclude:
+          - image: focal
+            arch: s390x
           - image: jammy
             arch: arm64
           - image: jammy
