--- a/.github/workflows/integration_test_app.yaml
+++ b/.github/workflows/integration_test_app.yaml
@@ -18,13 +18,15 @@ jobs:
         arch: [amd64, arm64, s390x, ppc64le]
         exclude:
           - image: focal
+            arch: ppc64le
+          - image: focal
             arch: s390x
           - image: jammy
             arch: arm64
           - image: jammy
-            arch: s390x
-          - image: noble
             arch: ppc64le
+          - image: jammy
+            arch: s390x
     steps:
       - uses: actions/checkout@v4.2.2
       - uses: canonical/setup-lxd@v0.1.2
@@ -56,7 +58,7 @@ jobs:
          tox -e integration -- --arch s390x --image=${{ matrix.image }} ${{ secrets.INTEGRATION_TEST_ARGS_APP_S390X }}
         working-directory: app
       - name: Run integration tests (ppc64le)
-        if: matrix.arch == 'ppc64el'
+        if: matrix.arch == 'ppc64le'
         env:
             OPENSTACK_PASSWORD: ${{ secrets.OPENSTACK_PASSWORD_PPC64EL }}
         run: |
