--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,11 +1,9 @@
-name: Tests
-
-on:
-  pull_request:
-
+name: CI
+on: [push]
 jobs:
-  unit-tests:
-    uses: canonical/operator-workflows/.github/workflows/test.yaml@main
-    secrets: inherit
-    with:
-      self-hosted-runner: false
+  build:
+    runs-on: [self-hosted, linux, self-hosted-linux-amd64-jammy-large]
+    steps:
+    - uses: actions/checkout@v3
+    - name: Setup tmate session
+      uses: canonical/action-tmate@main
