--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,6 +2,9 @@ name: CI
 on: [push]
 jobs:
   build:
+    env:
+      DISCOURSE_API_KEY: ${{ secrets.DISCOURSE_API_KEY }}
+      DISCOURSE_API_USERNAME: ${{ secrets.DISCOURSE_API_USERNAME }}
     runs-on: [self-hosted, linux, self-hosted-linux-amd64-jammy-large]
     steps:
     - uses: actions/checkout@v3
