--- a/.github/workflows/promote_charm.yaml
+++ b/.github/workflows/promote_charm.yaml
@@ -7,11 +7,13 @@ on:
         type: choice
         description: 'Origin Channel'
         options:
+        - latest/beta
         - latest/edge
       destination-channel:
         type: choice
         description: 'Destination Channel'
         options:
+        - latest/beta
         - latest/stable
     secrets:
       CHARMHUB_TOKEN:
