chore: reset openstackstdk to upstream

--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,7 +1,7 @@
 click==8.1.8
 fabric==3.2.2
 Jinja2==3.1.6
-openstacksdk @ git+https://github.com/yanksyoon/openstacksdk.git@fix/download_image_stream
+openstacksdk==4.5.0
 pyyaml==6.0.2
 tenacity==9.1.2
 typing_extensions==4.13.1
