add updated docs workflow

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,15 @@ clouds.yaml
 
 # Testing artefacts
 testing_key.pem
+
+# BEGIN VALE WORKFLOW IGNORE
+.vale/styles/*
+!.vale/styles/local
+!.vale/styles/config/
+
+.vale/styles/config/*
+!.vale/styles/config/vocabularies/
+
+.vale/styles/config/vocabularies/*
+!.vale/styles/config/vocabularies/local
+# END VALE WORKFLOW IGNORE
