--- a/.github/workflows/integration_test_app.yaml
+++ b/.github/workflows/integration_test_app.yaml
@@ -30,6 +30,9 @@ jobs:
     steps:
       - uses: actions/checkout@v5.0.0
       - uses: canonical/setup-lxd@v0.1.3
+      - uses: actions/setup-python@v6
+        with:
+          python-version: '3.10' 
       - name: Install tox
         run: |
           sudo apt-get update
