--- a/.github/workflows/integration_test.yaml
+++ b/.github/workflows/integration_test.yaml
@@ -17,5 +17,5 @@ jobs:
       modules: '["test_charm", "test_upgrade"]'
       self-hosted-runner: true
       self-hosted-runner-arch: X64
-      self-hosted-runner-label: stg-private-endpoint
+      self-hosted-runner-label: pfe-ci
       builder-runner-label: X64
