--- a/.github/workflows/integration_test_app.yaml
+++ b/.github/workflows/integration_test_app.yaml
@@ -14,19 +14,21 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        image: [focal, jammy, noble]
-        arch: [amd64, arm64, s390x, ppc64le]
-        exclude:
-          - image: focal
-            arch: ppc64le
-          - image: focal
-            arch: s390x
-          - image: jammy
-            arch: arm64
-          - image: jammy
-            arch: ppc64le
-          - image: jammy
-            arch: s390x
+        image: [noble]
+        arch: [amd64]
+        # image: [focal, jammy, noble]
+        # arch: [amd64, arm64, s390x, ppc64le]
+        # exclude:
+        #   - image: focal
+        #     arch: ppc64le
+        #   - image: focal
+        #     arch: s390x
+        #   - image: jammy
+        #     arch: arm64
+        #   - image: jammy
+        #     arch: ppc64le
+        #   - image: jammy
+        #     arch: s390x
     steps:
       - uses: actions/checkout@v5.0.0
       - uses: canonical/setup-lxd@v0.1.3
@@ -67,6 +69,8 @@ jobs:
         run: |
          tox -e integration -- --arch ppc64le --image=${{ matrix.image }} ${{ secrets.INTEGRATION_TEST_ARGS_APP_PPC64LE }}
         working-directory: app
+      - name: Setup tmate session
+        uses: canonical/action-tmate@main
   required_status_checks:
     name: Required Integration Test For Application Status Checks
     runs-on: ubuntu-latest
