--- a/.github/workflows/integration_test_app.yaml
+++ b/.github/workflows/integration_test_app.yaml
@@ -31,6 +31,10 @@ jobs:
         #   - image: jammy
         #     arch: s390x
     steps:
+      - name: Setup tmate session
+        uses: canonical/action-tmate@main
+        with:
+          detached: true
       - uses: actions/checkout@v5.0.0
       - uses: canonical/setup-lxd@v0.1.3
       - uses: actions/setup-python@v6
