--- a/.github/workflows/integration_test_app.yaml
+++ b/.github/workflows/integration_test_app.yaml
@@ -14,20 +14,28 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        image: [focal, jammy, noble]
-        arch: [amd64, arm64, s390x, ppc64le]
-        exclude:
-          - image: focal
-            arch: ppc64le
-          - image: focal
-            arch: s390x
-          - image: jammy
-            arch: arm64
-          - image: jammy
-            arch: ppc64le
-          - image: jammy
-            arch: s390x
+        # TODO: Debug
+        image: [focal]
+        arch: [amd64]
+        # image: [focal, jammy, noble]
+        # arch: [amd64, arm64, s390x, ppc64le]
+        # exclude:
+        #   - image: focal
+        #     arch: ppc64le
+        #   - image: focal
+        #     arch: s390x
+        #   - image: jammy
+        #     arch: arm64
+        #   - image: jammy
+        #     arch: ppc64le
+        #   - image: jammy
+        #     arch: s390x
     steps:
+      # TODO: Debug
+      - name: Setup tmate session
+        uses: canonical/action-tmate@main
+        with:
+          detached: true
       - uses: actions/checkout@v5.0.0
       - uses: canonical/setup-lxd@v0.1.3
       - uses: actions/setup-python@v6
