Enable Allure for integration tests

--- a/tox.ini
+++ b/tox.ini
@@ -149,12 +149,14 @@ pass_env =
     OPENSTACK_PASSWORD_AMD64
     OPENSTACK_PASSWORD_ARM64
 deps =
+    -r{[vars]tst_path}integration/requirements.txt
+    -r{toxinidir}/requirements.txt
+    allure-pytest>=2.8.18
+    git+https://github.com/canonical/data-platform-workflows@v24.0.0\#subdirectory=python/pytest_plugins/allure_pytest_collection_report
     juju
     pytest
     pytest-asyncio
     pytest-operator
-    -r{toxinidir}/requirements.txt
-    -r{[vars]tst_path}integration/requirements.txt
 commands =
     pytest -v --tb native --ignore={[vars]app_path} --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs}
     ; Testing with microstack
