--- a/tests/integration/data/charm/charmcraft.yaml
+++ b/tests/integration/data/charm/charmcraft.yaml
@@ -20,27 +20,12 @@ links:
   website: https://charmhub.io/github-runner-image-builder
 
 type: charm
-bases:
-  - build-on:
-    - name: "ubuntu"
-      channel: "22.04"
-      architectures:
-      - amd64
-    run-on:
-    - name: "ubuntu"
-      channel: "22.04"
-      architectures:
-      - amd64
-  - build-on:
-    - name: "ubuntu"
-      channel: "22.04"
-      architectures:
-      - arm64
-    run-on:
-    - name: "ubuntu"
-      channel: "22.04"
-      architectures:
-      - arm64
+
+platforms:
+  ubuntu@22.04:amd64:
+  ubuntu@22.04:arm64:
+  ubuntu@24.04:amd64:
+  ubuntu@24.04:arm64:
 
 config:
   options:
