--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -169,3 +169,6 @@ provides:
     interface: github_runner_image_v0
   cos-agent:
     interface: cos_agent
+  juju-info:
+    interface: juju-info
+    scope: container
