--- a/.github/workflows/integration_test.yaml
+++ b/.github/workflows/integration_test.yaml
@@ -24,8 +24,7 @@ jobs:
       self-hosted-runner-label: pfe-ci
       builder-runner-label: X64
       pre-run-script: |
-        -c "chmod +x tests/integration/pre_run_script.sh
-        ./tests/integration/pre_run_script.sh"
+        -c "./tests/integration/pre_run_script.sh"
   allure-report:
     if: ${{ !cancelled() && github.event_name == 'schedule' }}
     needs:
